# grpc-example

./: Makefile  client.py  main.py  pyproject.toml
proto/: hello_pb2.py
